gen/remotebuildexecution/v1/cargo-errors.log
    Checking google-remotebuildexecution1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/remotebuildexecution/v1/lib)
error[E0308]: mismatched types
    --> remotebuildexecution/v1/lib/src/lib.rs:4652:17
     |
4650 |             pub fn resume_marker(mut self, value: impl Into<Vec<u8>>) -> Self {
     |                                                                          ---- expected `resources::v_1::WatchRequestBuilder<'a, A>` because of return type
4651 |                 let v: Vec<u8> = value.into();
4652 |                 self.resume_marker = Some(v.into())
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `resources::v_1::WatchRequestBuilder`, found ()
     |
     = note: expected type `resources::v_1::WatchRequestBuilder<'a, A>`
                found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `google-remotebuildexecution1`.

To learn more, run the command again with --verbose.
